refactor: APIの型周り
